# toc-markdown

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  scriv.ini  setup.cfg  setup.py  toc-markdown  toc_markdown
.ci/: gate
.github/workflows/: lint.yml  release.yml  tests.yml
changelog.d/: 001.dos-protections.md  002.features.md  003.file-operations.md  004.metadata-preservation.md  005.header-text-fix.md  006-explicit-file-paths.md  007-follow-symlinks.md  scriv.ini
changelog.d/templates/: new_fragment.md.j2  title.md.j2
tests/: conftest.py  test_cli.py  test_config.py  test_fuzz.py  test_helpers.py  test_models.py  test_parse.py  test_parser_state.py  test_property_based.py  test_security.py  test_slug_generation.py  test_toc_generation.py
toc_markdown/: __init__.py  cli.py  config.py  constants.py  exceptions.py  filesystem.py  generator.py  models.py  parser.py  slugify.py
