[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toc-markdown"
version = "0.0.2"
description = "Generate a table of contents for a Markdown file."
readme = "README.md"
license = {text = "Apache Licence, Version 2.0"}
authors = [
    {name = "Sébastien De Revière"}
]
requires-python = ">=3.10"
dependencies = [
    "click",
]

[project.urls]
Documentation = "https://github.com/sderev/toc-markdown"
Issues = "https://github.com/sderev/toc-markdown/issues"
Changelog = "https://github.com/sderev/toc-markdown/releases"

[project.scripts]
toc-markdown = "toc_markdown.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
