[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toc-markdown"
version = "0.0.2"
description = "Generate a table of contents for a Markdown file."
readme = "README.md"
license = {text = "Apache Licence, Version 2.0"}
authors = [
    {name = "Sébastien De Revière"}
]
requires-python = ">=3.11"
dependencies = [
    "click",
]

[project.urls]
Documentation = "https://github.com/sderev/toc-markdown"
Issues = "https://github.com/sderev/toc-markdown/issues"
Changelog = "https://github.com/sderev/toc-markdown/releases"

[project.scripts]
toc-markdown = "toc_markdown.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
]

# Fuzz testing with atheris (Python 3.11 only)
# atheris 2.3.0 is incompatible with Python 3.12+ due to removed opcodes
fuzz = [
    "atheris>=2.3.0; python_version < '3.12'",
]

[tool.coverage.run]
source = ["toc_markdown"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]
